# syswatch-cpp

./: .gitignore  CMakeLists.txt  syswatch-cpp
config/: thresholds.conf
include/: alert_engine.h  cpu_monitor.h  disk_monitor.h  logger.h  memory_monitor.h  network_monitor.h  process_monitor.h  system_monitor.h  temperatur_monitor.h  temperature_monitor.h  utils.h
src/: alert_engine.cpp  cpu_monitor.cpp  disk_monitor.cpp  logger.cpp  main.cpp  memory_monitor.cpp  network_monitor.cpp  process_monitor.cpp  system_monitor.cpp  temperature_monitor.cpp
